fix button functions

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
         <article class="review">
             <div class="image-container">
-            <img class="reviwer-img" src="man1.avif" alt="Reviewer profile picture">
+            <img class="reviwer-img" src="" alt="Reviewer profile picture">
             </div>
             <div class="text-container">
-             <h4 id="author">Sara Jones</h4>
-             <p id="job">ux designer</p>
-             <p class="info">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, ducimus illum. Fugiat hic maxime eveniet recusandae! Veritatis, impedit rerum quisquam nobis cumque provident aliquid, iure perspiciatis eos adipisci assumenda culpa."</p>
+             <h4 id="author"></h4>
+             <p id="job"></p>
+             <p class="info"></p>
             </div>
             <div class="btn-container">
                 <button class="left btn"><i class="fa-solid fa-arrow-left"></i></button>
@@ -35,6 +35,6 @@
 
       </section>
     </main>
-
+<script src="script.js"></script>
 </body>
 </html>
